kafka/service-broker.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-broker
  name: kafka-service
  namespace: kafka
spec:
  ports:
  - port: 9092
    nodePort: 32004
  selector:
    app: kafka-broker
  type: NodePort
